--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 
 * {
   margin: 0;
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 400;
   height: 100vh;
   color: #333;
@@ -63,17 +63,17 @@ main {
   margin-bottom: auto;
 }
 
-.player--active {
+.playerActive {
   background-color: rgba(255, 255, 255, 0.4);
 }
-.player--active .name {
+.playerActive .name {
   font-weight: 700;
 }
-.player--active .score {
+.playerActive .score {
   font-weight: 400;
 }
 
-.player--active .current {
+.playerActive .current {
   opacity: 1;
 }
 
@@ -88,14 +88,14 @@ main {
   transition: all 0.75s;
 }
 
-.current-label {
+.currentLabel {
   text-transform: uppercase;
   margin-bottom: 1rem;
   font-size: 1.7rem;
   color: #ddd;
 }
 
-.current-score {
+.currentScore {
   font-size: 3.5rem;
 }
 
@@ -129,13 +129,13 @@ main {
   margin-right: 0.7rem;
 }
 
-.btn--new {
+.btnNew {
   top: 4rem;
 }
-.btn--roll {
+.btnRoll {
   top: 39.3rem;
 }
-.btn--hold {
+.btnHold {
   top: 46.1rem;
 }
 
@@ -157,11 +157,11 @@ main {
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
 }
 
-.player--winner {
+.playerWinner {
   background-color: #2f2f2f;
 }
 
-.player--winner .name {
+.playerWinner {
   font-weight: 700;
   color: #c7365f;
 }
