--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ main {
 .score {
   font-size: 8rem;
   font-weight: 300;
-  color: #c7365f;
+  color: #fff;
   margin-bottom: auto;
 }
 
@@ -119,8 +119,8 @@ main {
   backdrop-filter: blur(10px);
 
   padding: 0.7rem 2.5rem;
-  border-radius: 50rem;
-  box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.4);
 }
 
 .btn::first-letter {
@@ -154,7 +154,20 @@ main {
   top: 16.5rem;
   transform: translateX(-50%);
   height: 10rem;
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0rem 0rem 3rem 1rem rgba(0, 0, 0, 0.52);
+  border-radius: 6px;
+}
+
+h1 {
+  position: absolute;
+  left: 50%;
+  top: 27.5rem;
+  transform: translateX(-50%);
+  height: 10rem;
+  text-transform: uppercase;
+  font-size: 5rem;
+  letter-spacing: 2px;
+  text-shadow: 2px 4px #c7365f;
 }
 
 .playerWinner {
